productions/agentkit-cli/archives/0.52.0/en/quickstart.mdx
---
title: "Quickstart"
zh_link: "/productions/agentkit-cli/archives/0.52.0/zh/quickstart"
---

## Install

No Node.js required — one command installs the standalone binary and puts `agentkit` (and its alias `ak`) on your PATH:

<Tabs>
  <Tab title="wget">
    ```bash lines
    wget -qO- https://agentkit-cli.tos-cn-beijing.volces.com/install.sh | sh
    ```
  </Tab>
  <Tab title="curl">
    ```bash lines
    curl -fsSL https://agentkit-cli.tos-cn-beijing.volces.com/install.sh | sh
    ```
  </Tab>
</Tabs>

Verify the install:

```bash lines
agentkit --help
```

<Tip>
  The binary installs to `AGENTKIT_HOME` (`~/.agentkit` by default), with compatibility links for `agentkit` and `ak` in `AGENTKIT_BIN_DIR` (`~/.local/bin` by default). When overriding these directories, use absolute paths and keep them separate. The install directory also contains required runtime assets such as `templates/`, `lifecycle-templates/`, `harness/`, `skills/`, `im-proxies/`, and `vendor/`; when manually moving or extracting a standalone release, keep these directories beside `ak` in the same install directory. To install a specific version, set the `AGENTKIT_VERSION` environment variable (defaults to `latest`). If the current terminal still cannot find the command, reopen the terminal or source the shell configuration printed by the installer.
</Tip>

<Note>
  The install script writes managed `agentkit` and `ak` dispatch entries into the zsh, bash, or fish startup configuration so the standalone CLI takes priority over Python commands with the same name from pip, pipx, venv, or Conda after the shell reloads. If the current environment already has a Python `agentkit` command, the installer preserves it and writes a restorable shim; the uninstall script restores that entry when it is still managed by the installer. Set `AGENTKIT_NO_MODIFY_PATH=1` to skip automatic shell configuration changes and print the block to add manually.
</Note>

## Authentication

The CLI signs every cloud OpenAPI request. Provide credentials for the cloud provider or login mode you use:

<Tabs>
  <Tab title="AK/SK">
    Set these in your environment or a local `.env` (git-ignored):

    ```bash lines
    VOLCENGINE_ACCESS_KEY=...
    VOLCENGINE_SECRET_KEY=...
    VOLCENGINE_REGION=cn-beijing   # optional, defaults to cn-beijing
    ```
  </Tab>
  <Tab title="BytePlus">
    Set BytePlus credentials, then write the default cloud provider and region to user-wide config:

    ```bash lines
    BYTEPLUS_ACCESS_KEY=...
    BYTEPLUS_SECRET_KEY=...
    agentkit --provider byteplus config --global --region ap-southeast-1
    ```
  </Tab>
  <Tab title="SSO">
    Browser login that stores short-lived STS credentials.

    ```bash lines
    agentkit login <sso-address>
    agentkit whoami
    ```
  </Tab>
</Tabs>

<Tip>
  SSO login caches short-lived STS credentials. When AK/SK credentials are not explicitly configured, runtime, knowledge, memory, tool, and other cloud commands use valid credentials from the active login profile. Run `agentkit login` again after the credentials expire.
</Tip>

## Deploy in three steps

<Steps>
  <Step title="Scaffold a project">
    ```bash lines
    agentkit init my-agent --template basic
    cd my-agent
    ```
  </Step>
  <Step title="Build & deploy">
    ```bash lines
    agentkit launch
    ```
  </Step>
  <Step title="Invoke the runtime">
    ```bash lines
    agentkit invoke run "hello"
    ```
  </Step>
</Steps>

See the [command reference](/productions/agentkit-cli/preview/en/commands), or run `agentkit tree`
to print the command tree. To switch cloud provider or region, run `agentkit config --cloud_provider byteplus --region ap-southeast-1` in the project.
